test/error/E12.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {}
		}
	},
	"local_variables": {}
}
